# stealr

./: .pre-commit-config.yaml  LICENSE  README.md  generate_all_docs.ps1  generate_all_docs.sh
.github/workflows/: ci.yml  hoster-ci.yml  scraper-ci.yml  stealr-ci.yml  trainer-ci.yml
hoster/: Dockerfile  pyproject.toml
hoster/docs/: conf.py  index.rst
hoster/docs/_build/doctrees/: environment.pickle  index.doctree
hoster/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
scraper/: pyproject.toml
scraper/docs/: conf.py
scraper/docs/_build/doctrees/: environment.pickle  index.doctree
scraper/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
scraper/docs/_build/html/_sources/: index.rst.txt
stealr/: pyproject.toml
stealr/docs/: conf.py  index.rst
stealr/docs/_build/doctrees/: environment.pickle  index.doctree
stealr/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
trainer/: pyproject.toml
trainer/docs/: conf.py  index.rst
trainer/docs/_build/doctrees/: environment.pickle  index.doctree
trainer/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
