[tool.poetry]
name = "hoster"
version = "0.1.0"
description = "The deployment package for stealr"
authors = ["Daniel Kamphake <daniel.kamphake@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastAPI = "^0.111.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
tox = "^4.15.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"