[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "A service for scraping images."
authors = ["Daniel Kamphake <daniel.kamphake@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
tox = "^4.15.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"