[tool.poetry]
name = "trainer"
version = "0.1.0"
description = "Training pipeline for the models."
authors = ["Daniel Kamphake <daniel.kamphake@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"